# Open-Generative-Fill

./: LICENSE  README.md  edit-with-text-OWLv2-LLAVA.ipynb  g-dino-sam-mask-generation.ipynb  grounding_dino_sam-inpainting.ipynb  image-editing-with-text.ipynb  imagediting_through_text.ipynb  inference.py  pyproject.toml  scratchpad.ipynb  text_image_edits_t4.ipynb
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
experiments/: SAM_GroundingDINO.ipynb  demo-gen-fill-gsam-diff.ipynb  editing_text_captioning_with_LM.ipynb  image-caption.ipynb  nous-llama-7b.ipynb  open_gen_fill_text_captioning_with_LM_mask_dilation.ipynb  owlv2-with-sam.ipynb  sam_owlvit.ipynb
notebooks/: edit-with-text-OWLv2-LLAVA.ipynb  open-gen-fill-keras-sam.ipynb  open-gen-fill-mask-dilation.ipynb  open-gen-fill.ipynb  open_generative_fill_baseline.ipynb  open_generative_fill_diffedit.ipynb
notebooks/sld/: llm.ipynb  sld_diffusion.ipynb
open_generative_fill/: config.py  lm_models.py  load_data.py  utils.py  vision_models.py
