[tool.poetry]
name = "open-generative-fill"
version = "0.1.0"
description = "Generative Fill with Open Source Models"
authors = ["Ritwik Raha <ritwikraha.nsec@gmail.com>", "Aritra Roy Gosthipaty <aritra.born2fly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.37.2"
diffusers = "^0.26.3"
accelerate = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
